```mermaid
classDiagram
    class CategoryController
    class MapperController
    class ReaderController
    class RecalculateExpenseController
    class SplitewiseExpensesController
    class TotalExpensePerCategoryController
    class UsersController

    class CategoryService
    class ExpenseMapperService
    class ExpenseReadService
    class RecalculatedExpenseService
    class SplitewiseExpenseService
    class TotalExpensesPerCategoryService
    class UsersService

    class AppDbContext

    class ExpenseRecord
    class Categories
    class SwRecords
    class Users
    class TotalExpensePerCategory
    class RecalculatedExpenseRecord
    class UploadedFile

    CategoryController --> CategoryService
    MapperController --> ExpenseMapperService
    ReaderController --> ExpenseReadService
    RecalculateExpenseController --> RecalculatedExpenseService
    SplitewiseExpensesController --> SplitewiseExpenseService
    TotalExpensePerCategoryController --> TotalExpensesPerCategoryService
    UsersController --> UsersService

    CategoryService --> AppDbContext
    ExpenseMapperService --> AppDbContext
    ExpenseReadService --> AppDbContext
    RecalculatedExpenseService --> AppDbContext
    SplitewiseExpenseService --> AppDbContext
    TotalExpensesPerCategoryService --> AppDbContext
    UsersService --> AppDbContext

    AppDbContext --> ExpenseRecord
    AppDbContext --> Categories
    AppDbContext --> SwRecords
    AppDbContext --> Users
    AppDbContext --> TotalExpensePerCategory
    AppDbContext --> RecalculatedExpenseRecord
    AppDbContext --> UploadedFile
```
